[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/v16_program.rs"

[features]
# v16 deploys through the Anchor v2 / Pinocchio entrypoint by default. The
# Solana 1.18 bundled SBF toolchain cannot parse the current Anchor v2
# dependency graph; use platform-tools v1.52 or newer for deployable builds.
# `--no-default-features` remains available for legacy local compatibility.
default = ["anchor-v2"]
no-entrypoint = []
test-sbf = []
cu-audit = []  # Enable compute unit checkpoints for CU auditing
kani = []
anchor-v2 = ["dep:anchor-lang-v2"]
# v16 is account-local and has no slab-wide account-count tier. These
# feature names are no-ops so old local commands continue to build without
# changing the deployed code shape.
small = []
medium = []

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10"
# pythnet-sdk (no default features) exposes the canonical
# PriceFeedMessage struct used inside Pyth Solana Receiver's
# PriceUpdateV2 account. Using this official struct's BorshDeserialize
# swaps the prior hand-rolled fixed-offset parser for a compile-time
# typed binding: any breaking layout change on the Pyth side produces a
# build error (missing/reordered fields) or a deserialize error at
# runtime, rather than silent garbage reads. Pulled with
# no-default-features to keep the transitive closure light (~52 crates,
# no Anchor).
pythnet-sdk = { version = "2.3", default-features = false }
# pythnet-sdk uses borsh 0.10 internally; pin the same major so our
# direct use of BorshDeserialize on its types reads/writes the same
# wire format.
borsh = { version = "0.10", default-features = false }
pinocchio = "0.6"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
percolator = { git = "https://github.com/aeyakovenko/percolator", rev = "8e0e3f858fa07b44434d1ff2e4630266432cdb21" }
anchor-lang-v2 = { git = "https://github.com/solana-foundation/anchor", rev = "e3cf760826fa0a60f247635ea0572e59861ec9b5", package = "anchor-lang-v2", default-features = false, features = ["alloc", "guardrails"], optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
# Host tests still use owned snapshot helpers. The SBF/program target remains
# on the engine's zero-copy account/view API and does not enable this feature.
percolator = { git = "https://github.com/aeyakovenko/percolator", rev = "8e0e3f858fa07b44434d1ff2e4630266432cdb21", features = ["runtime-vec-api"] }

[dev-dependencies]
bincode = "1"
solana-sdk = "1.18"
solana-client = "1.18"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
litesvm = "0.1"
shellexpand = "3"
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "idl-build"))',
] }
